--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,4 +12,4 @@ jobs:
     - name: OWASP ZAP Full Scan 
       uses: zaproxy/action-full-scan@v0.2.0
       with:
-        target: "https://www.visitcalifornia.com/places-to-visit/"
+        target: "https://www.bluecrossnc.com/"
